src/parse/snapshots/protox__parse__tests__parse_service-16.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_service() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Err(
    [
        UnexpectedToken {
            expected: "'.' or ')'",
            found: LeftParen,
            span: 23..24,
        },
    ],
)
