src/parse/snapshots/protox__parse__tests__parse_service-19.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Err(
    [
        UnexpectedToken {
            expected: "'stream' or a type name",
            found: ")",
            span: 34..35,
        },
    ],
)
