src/parse/snapshots/protox__parse__tests__parse_service-20.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_service() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Err(
    [
        UnexpectedToken {
            expected: "a type name",
            found: Equals,
            span: 41..42,
        },
    ],
)
