src/parse/snapshots/protox__parse__tests__parse_service-5.snap
---
source: src/parse/tests.rs
expression: parser.parse_service()
---
Ok(
    Service {
        name: Ident {
            value: "Foo",
            span: 8..11,
        },
        options: [],
        methods: [
            Method {
                name: Ident {
                    value: "bar",
                    span: 18..21,
                },
                input_ty: TypeName {
                    leading_dot: None,
                    name: FullIdent {
                        parts: [
                            Ident {
                                value: "A",
                                span: 22..23,
                            },
                        ],
                    },
                },
                output_ty: TypeName {
                    leading_dot: None,
                    name: FullIdent {
                        parts: [
                            Ident {
                                value: "B",
                                span: 34..35,
                            },
                            Ident {
                                value: "C",
                                span: 36..37,
                            },
                        ],
                    },
                },
                options: [],
                is_client_streaming: false,
                is_server_streaming: false,
                comments: Comments {
                    leading_detached_comments: [],
                    leading_comment: None,
                    trailing_comment: None,
                },
                span: 14..39,
            },
        ],
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..41,
    },
)
